; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-stmp3xxx.c_stmp3xxx_wait_time.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-stmp3xxx.c_stmp3xxx_wait_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stmp3xxx_rtc_data = type { i64 }

@HW_RTC_STAT = common dso_local global i64 0, align 8
@RTC_STAT_STALE_REGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stmp3xxx_rtc_data*)* @stmp3xxx_wait_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stmp3xxx_wait_time(%struct.stmp3xxx_rtc_data* %0) #0 {
  %2 = alloca %struct.stmp3xxx_rtc_data*, align 8
  store %struct.stmp3xxx_rtc_data* %0, %struct.stmp3xxx_rtc_data** %2, align 8
  br label %3

3:                                                ; preds = %14, %1
  %4 = load %struct.stmp3xxx_rtc_data*, %struct.stmp3xxx_rtc_data** %2, align 8
  %5 = getelementptr inbounds %struct.stmp3xxx_rtc_data, %struct.stmp3xxx_rtc_data* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @HW_RTC_STAT, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @__raw_readl(i64 %8)
  %10 = load i32, i32* @RTC_STAT_STALE_REGS, align 4
  %11 = call i32 @BF(i32 128, i32 %10)
  %12 = and i32 %9, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = call i32 (...) @cpu_relax()
  br label %3

16:                                               ; preds = %3
  ret void
}

declare dso_local i32 @__raw_readl(i64) #1

declare dso_local i32 @BF(i32, i32) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
